--- a/pastvina/templates/pastvina/index.html
+++ b/pastvina/templates/pastvina/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <!-- Úvod -->
-<section class="full-height landing background">
+<section class="full-height full-width landing background">
     <div class="overlay"></div>
     <div class="center">
     <h1>A s kým paseš kozy ty?</h1>
