--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -183,7 +183,7 @@ form input {
     padding: 5px;
 }
 
-.table {
+.table-all {
     border-collapse:collapse;
     border-spacing:0;
     width:100%;
@@ -191,10 +191,18 @@ form input {
     color: #383838;
     border:1px solid #ccc;
 }
-.table tr{border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
-.table tr:nth-child(odd){background-color:#fff}.table-all tr:nth-child(even){background-color:#f1f1f1}
-.table td,.table-all th{padding:10px 10px;display:table-cell;text-align:left;vertical-align:top}
-.table th:first-child,.table-all td:first-child{padding-left:16px}
+.table-all tr{border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
+.table-all tr:nth-child(odd){background-color:#fff}.table-all tr:nth-child(even){background-color:#f1f1f1}
+.table-all td,.table-all th{padding:10px 10px;display:table-cell;text-align:left;vertical-align:top}
+.table-all th:first-child,.table-all td:first-child{padding-left:16px}
+
+/* =========== CHART ========= */
+.chart {
+    display: inline-block;
+    width: 45%;
+    padding: 0px;
+    margin: 0px;
+}
 
 /* =========== MESSAGES ========= */
 
