Change menu name.

--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -8,7 +8,7 @@
 <nav>
 {% endif %}
     <div class="left">
-    <a href="/" class="logo">PASTVA</a>
+    <a href="/" class="logo">N-trophy 2021 finále</a>
     <a href="{% url 'game' %}">Hra</a>
     
     {% for page in static_pages %}
