--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -1,13 +1,21 @@
 /* =========== SETUP =========== */
 
 body{
-  margin: 0;
-  font-family: 'Quicksand', sans-serif;
-  background-color: #90d43d;
-  color: white;
+    margin: 0;
+    font-family: 'Quicksand', sans-serif;
+    background-color: #90d43d;
+    color: white;
 }
 
 /* =========== CONSTANTS =========== */
+
+.input {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    height: 30px;
+    padding: 5px;
+}
 
 h1{
   font-size: 3rem;
@@ -38,12 +46,31 @@ section{
 }
 
 .container {
-    max-width: 1000px;
-    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    max-width: 1200px;
 }
 
-.container.centered {
-    margin: 0 auto;
+.brick {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    min-height: 10px;
+    float: left;
+}
+
+.half {
+    width: 49.999%;
+}
+
+.third {
+    width: 33.33%;
+}
+
+.quarter {
+    width: 24.999%;
 }
 
 article{
@@ -80,19 +107,19 @@ article .labels span.blue{
   background-color: #21b6cb;
 }
 article .labels span.orange{
-  background-color: #eb990d;
+    background-color: #eb990d;
 }
 
 .left{
-  float: left;
+    float: left;
 }
 .right{
-  float: right;
+    float: right;
 }
 
 .full-height{
-  height: 720px;
-  height: 100vh;
+    height: 720px;
+    height: 100vh;
 }
 
 .full-width{
@@ -102,31 +129,31 @@ article .labels span.orange{
 }
 
 .center{
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  display: block;
-  text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: block;
+    text-align: center;
 }
 
 .background{
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .button{
-  padding: 15px 25px;
-  display: inline-block;
-  border: 3px solid #90d43d;
-  font-weight: 700;
-  text-decoration: none;
-  font-size: 1rem;
-  color: #90d43d;
-  cursor: pointer;
+    padding: 15px 25px;
+    display: inline-block;
+    border: 3px solid #90d43d;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 1rem;
+    color: #90d43d;
+    cursor: pointer;
 }
 
 .button:focus {outline:0;}
@@ -197,12 +224,6 @@ form input {
 .table-all th:first-child,.table-all td:first-child{padding-left:16px}
 
 /* =========== CHART ========= */
-.chart {
-    display: inline-block;
-    width: 45%;
-    padding: 0px;
-    margin: 0px;
-}
 
 /* =========== MESSAGES ========= */
 
@@ -368,4 +389,13 @@ footer span {
 
 footer span a i {
     margin-right: 5px
+}
+
+/* control panel */
+.control-box {
+    border: solid black 1px;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
