--- a/pastvina/templates/pastvina/base.html
+++ b/pastvina/templates/pastvina/base.html
@@ -12,6 +12,7 @@
 <link href="{% static "pastvina/css/jquery-modal.css" %}" rel="stylesheet">
 <script src="{% static "pastvina/js/jquery.js" %}"></script>
 <script src="{% static "pastvina/js/jquery-modal.js" %}"></script>
+<script src="{% static "pastvina/js/update_charts.js" %}"></script>
 
 <script>
   $(function() {
