--- a/pastvina/templates/pastvina/parts/crop_production_chart.html
+++ b/pastvina/templates/pastvina/parts/crop_production_chart.html
@@ -4,7 +4,7 @@
 
 
 <script>
-var productionChartCrop{{ id }} = new Chart(
+cropProductionCharts["{{id}}"] = new Chart(
     document.getElementById('prod-crop-{{id}}').getContext('2d'),
     {
         type: 'bar',
