--- a/pastvina/templates/pastvina/parts/crop_storage_chart.html
+++ b/pastvina/templates/pastvina/parts/crop_storage_chart.html
@@ -1,6 +1,10 @@
-<div class="brick quarter"><canvas id="storage-crop-{{ id }}"></canvas></div>
+<div class="brick quarter">
+    <canvas id="storage-crop-{{ id }}"></canvas>
+</div>
+
+
 <script>
-var productionChartCrop{{ id }} = new Chart(
+cropStorageCharts["{{id}}"] = new Chart(
     document.getElementById('storage-crop-{{id}}').getContext('2d'),
     {
         type: 'bar',
