--- a/pastvina/templates/pastvina/parts/livestock_production_chart.html
+++ b/pastvina/templates/pastvina/parts/livestock_production_chart.html
@@ -4,7 +4,7 @@
 
 
 <script>
-var productionChartLivestock{{ id }} = new Chart(
+livestockProductionCharts["{{id}}"] = new Chart(
     document.getElementById('prod-ls-{{id}}').getContext('2d'),
     {
         type: 'bar',
