--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -107,44 +107,12 @@
 </section>
 
 <script>
-    let update_charts_text = `{
-    "money": 100,
-    "livestock": [
-        {
-            "name": "Tučňáci",
-            "id": 1,
-            "buy": 100,
-            "sell": 100,
-            "production": [0, 1]
-        },
-        {
-            "name": "Kozy",
-            "id": 2,
-            "buy": 50,
-            "sell": 70,
-            "production": [0, 1, 2]
-        }
-    ],
-    "crops": [
-        {
-            "name": "Melouny",
-            "id": 1,
-            "buy": 10,
-            "sell": 10,
-            "production": [0, 1, 2, 3, 4, 5],
-            "storage": [2,5,4]
-        },
-        {
-            "name": "Oves",
-            "id": 2,
-            "buy": 5,
-            "sell": 4,
-            "production": [0, 1, 2, 3, 4, 8, 9, 10],
-            "storage": [4,5,6]
-        }
-    ]
-}`;
-    update_charts(update_charts_text);
+    $.getJSON("update", function(update_data) {
+        update_charts(update_data);
+    })
+    .fail(function(){
+        console.log("Could not update chart data");
+    });
 </script>
 
 {% endblock %}
