--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -399,3 +399,20 @@ footer span a i {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+/* =========== STICKY HEADER =========== */
+
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 3;
+  }
+
+  .game-header {
+    background: rgb(60,60,60);
+    background: linear-gradient(150deg,rgba(70,80,60,255) 0%, rgba(20,30,10,255) 100%);
+    padding: 10px;
+    overflow: auto;
+}
