Fix styling problem with sticky game header

--- a/pastvina/templates/pastvina/parts/game_header.html
+++ b/pastvina/templates/pastvina/parts/game_header.html
@@ -1,8 +1,9 @@
 <!-- Game Header -->
-<div class="game-header" id="game-header">
-    <!-- Header should not have margin in his childs -->
-    <div style="float: left;">Peníze: <span id="game-money"></span></div>
-    <div style="float: right;">Další iterace za <span id="tick-countdown">-</span> s</div>
+<div id="game-header">
+    <div class="game-header">
+        <div style="float: left;">Peníze: <span id="game-money"></span></div>
+        <div style="float: right;">Další iterace za <span id="tick-countdown">-</span> s</div>
+    </div>
 </div>
 <div style="display: none;" id="game-header-placeholder"></div>
 
