Minor changes in game update

--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -89,7 +89,7 @@
                 <td>{{ ls.consumption_type.name }}</td>
                 <td>{{ ls.consumption }}</td>
                 <td>{{ ls.product_name }}</td>
-                <td><span class="product-price-{{ ls.id }}">-</span></td>
+                <td><span class="ls-product-price-{{ ls.id }}">-</span></td>
             </tr>
             {% endfor %}
         </table>
