--- a/pastvina/templates/pastvina/parts/game_header.html
+++ b/pastvina/templates/pastvina/parts/game_header.html
@@ -1,7 +1,7 @@
 <!-- Game Header -->
 <div id="game-header">
     <div class="game-header">
-        <div style="float: left;">Peníze: <span id="game-money"></span></div>
+        <div style="float: left;">Peníze: <span id="game-money">-</span></div>
         <div style="float: right;">Další iterace za <span id="tick-countdown">-</span> s</div>
     </div>
 </div>
