--- a/pastvina/templates/pastvina/base.html
+++ b/pastvina/templates/pastvina/base.html
@@ -13,6 +13,7 @@
 <script src="{% static "pastvina/js/jquery.js" %}"></script>
 <script src="{% static "pastvina/js/jquery-modal.js" %}"></script>
 <script src="{% static "pastvina/js/update_charts.js" %}"></script>
+<script src="{% static "pastvina/js/trade.js" %}"></script>
 
 <script>
   $(function() {
