Add reducing the possible values to buy and sell on frontend

--- a/pastvina/templates/pastvina/parts/age_chart.html
+++ b/pastvina/templates/pastvina/parts/age_chart.html
@@ -4,7 +4,7 @@
 
 
 <script>
-{{chart_type}}AgeCharts["{{id}}"] = new Chart(
+{{chart_type}}AgeCharts[{{id}}] = new Chart(
     document.getElementById('{{chart_type}}-{{id}}').getContext('2d'),
     {
         type: 'bar',
