--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -52,12 +52,12 @@
         {% for crop in crops %}
         <div class="container centered control-box">
             <div class="quarter brick">
-                <input id="buy-crop-count-{{crop.id}}" class="full-width input" type="number" value=0>
+                <input id="buy-crop-count-{{crop.id}}" class="full-width input" type="number" value=0 min="0">
                 <button class="full-width input" onclick="requestTrade('buy', 'crop', {{crop.id}}, document.getElementById('buy-crop-count-{{crop.id}}').value)">Koupit</button>
             </div>
             {% include "pastvina/parts/age_chart.html" with chart_type="crop" color=crop.color name=crop.name name_genitive=crop.name_genitive id=crop.id growth_time=crop.growth_time life_time=crop.rotting_time %}
             <div class="quarter brick">
-                <input id="sell-crop-count-{{crop.id}}" class="full-width input" type="number" value=0>
+                <input id="sell-crop-count-{{crop.id}}" class="full-width input" type="number" value=0 min="0">
                 <button class="full-width input" onclick="requestTrade('sell', 'crop', {{crop.id}}, document.getElementById('sell-crop-count-{{crop.id}}').value)">Prodat</button>
             </div>
         </div>
@@ -100,14 +100,14 @@
         {% for ls in livestock %}
         <div class="container centered control-box">
             <div class="quarter brick">
-                <input id="buy-ls-count-{{ls.id}}" class="full-width input" type="number" value=0>
+                <input id="buy-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
                 <button class="full-width input" onclick="requestTrade('buy', 'ls', {{ls.id}}, document.getElementById('buy-ls-count-{{ls.id}}').value)">Koupit</button>
             </div>
             {% include "pastvina/parts/age_chart.html" with chart_type="livestock" color=ls.color name=ls.name name_genitive=ls.name_genitive id=ls.id growth_time=ls.growth_time life_time=ls.life_time %}
             <div class="quarter brick">
-                <input id="sell-ls-count-{{ls.id}}" class="full-width input" type="number" value=0>
+                <input id="sell-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
                 <button class="full-width input" onclick="requestTrade('sell', 'ls', {{ls.id}}, document.getElementById('sell-ls-count-{{ls.id}}').value)">Porazit a prodat (max {{round.livestock_slaughter_limit}} ks)</button>
-                <input id="kill-ls-count-{{ls.id}}" class="full-width input" type="number" value=0>
+                <input id="kill-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
                 <button class="full-width input" onclick="requestTrade('kill', 'ls', {{ls.id}}, document.getElementById('kill-ls-count-{{ls.id}}').value)">Utratit</button>
             </div>
         </div>
@@ -115,6 +115,18 @@
 </section>
 
 <script>
+    {% for crop in crops %}
+    cropSellTime[{{ crop.id }}] = {{ crop.rotting_time }};
+    {% endfor %}
+
+    {% for ls in livestock %}
+    livestockSellTime[{{ ls.id }}] = {{ ls.life_time }};
+    {% endfor %}
+    livestockMaxSell = {{round.livestock_slaughter_limit}};
+    {% comment %}
+    // TODO if livestock slaughter limit changes between rounds, it needs to be changeable
+    {% endcomment %}
+
     setInterval(updateTimeToNextTick, 500);
 </script>
 
