Remove dot before error messages

--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -227,6 +227,10 @@ form input {
 
 /* =========== MESSAGES ========= */
 
+.messages {
+    list-style-type:none
+}
+
 .message.debug {
     color: #b800cc;
 }
