--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -15,6 +15,7 @@ body{
     box-sizing: border-box;
     height: 30px;
     padding: 5px;
+    border-radius: 5px;
 }
 
 h1{
@@ -22,9 +23,12 @@ h1{
   margin: 0;
   text-align: left;
 }
+section h1{
+  text-align: center;
+}
 h2{
   font-size: 2.1rem;
-  font-weight: 500;span
+  font-weight: 500;
   text-align: left;
 }
 p{
@@ -54,11 +58,15 @@ section{
 }
 
 .brick {
-    margin: 0;
+    margin: auto;
     padding: 0;
     display: inline-block;
     min-height: 10px;
-    float: left;
+    float: left;   
+}
+
+.container .brick {
+  height: 294px;
 }
 
 .half {
@@ -71,6 +79,23 @@ section{
 
 .quarter {
     width: 24.999%;
+}
+
+.brick-inputs {
+  width: 90%;
+  padding: 25px 15px 0px 15px;
+}
+
+.rules {
+  text-align: left;
+  max-width: 1200px;
+  margin: auto;
+}
+.rules p {
+  margin: auto;
+  margin-top: 10px;
+  max-width: 100%;
+  padding: 0px 15px;
 }
 
 article{
@@ -124,8 +149,17 @@ article .labels span.orange{
 
 .full-width{
     width: 100%;
-    margin: 0;
-    padding: 0;
+    margin: 5px 0px;
+    padding: 0px 8px;
+}
+
+.buy-sell-button{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 30px;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 .center{
@@ -222,6 +256,8 @@ form input {
 .table-all tr:nth-child(odd){background-color:#fff}.table-all tr:nth-child(even){background-color:#f1f1f1}
 .table-all td,.table-all th{padding:10px 10px;display:table-cell;text-align:left;vertical-align:top}
 .table-all th:first-child,.table-all td:first-child{padding-left:16px}
+
+
 
 /* =========== CHART ========= */
 
@@ -417,6 +453,6 @@ footer span a i {
   .game-header {
     background: rgb(60,60,60);
     background: linear-gradient(150deg,rgba(70,80,60,255) 0%, rgba(20,30,10,255) 100%);
-    padding: 10px;
+    padding: 10px 40px;
     overflow: auto;
 }
