--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -11,7 +11,7 @@
 <section class="padding-small light">
     <h1>Vítejte na pastvině</h1>
 </section>
-<section class="padding-small dark">
+<!-- <section class="padding-small dark">
     <h2>Pravidla</h2>
     <p>
         <ul>
@@ -19,7 +19,7 @@
             <li>Netrkejte ostatní kozy.</li>
         </ul>
     </p>
-</section>
+</section> -->
 
 
 {% include "pastvina/parts/game_header.html" %}
@@ -52,13 +52,17 @@
         {% for crop in crops %}
         <div class="container centered control-box">
             <div class="quarter brick">
-                <input id="buy-crop-count-{{crop.id}}" class="full-width input" type="number" value=0 min="0">
-                <button class="full-width input" onclick="requestTrade('buy', 'crop', {{crop.id}}, document.getElementById('buy-crop-count-{{crop.id}}').value)">Koupit</button>
+                <div class="brick-inputs">
+                    <input id="buy-crop-count-{{crop.id}}" class="full-width input" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button" onclick="requestTrade('buy', 'crop', {{crop.id}}, document.getElementById('buy-crop-count-{{crop.id}}').value)">Koupit</button>
+                </div>
             </div>
             {% include "pastvina/parts/age_chart.html" with chart_type="crop" color=crop.color name=crop.name name_genitive=crop.name_genitive id=crop.id growth_time=crop.growth_time life_time=crop.rotting_time %}
             <div class="quarter brick">
-                <input id="sell-crop-count-{{crop.id}}" class="full-width input" type="number" value=0 min="0">
-                <button class="full-width input" onclick="requestTrade('sell', 'crop', {{crop.id}}, document.getElementById('sell-crop-count-{{crop.id}}').value)">Prodat</button>
+                <div class="brick-inputs">
+                    <input id="sell-crop-count-{{crop.id}}" class="full-width input" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button" onclick="requestTrade('sell', 'crop', {{crop.id}}, document.getElementById('sell-crop-count-{{crop.id}}').value)">Prodat</button>
+                </div>
             </div>
         </div>
         {% endfor %}
@@ -100,15 +104,21 @@
         {% for ls in livestock %}
         <div class="container centered control-box">
             <div class="quarter brick">
-                <input id="buy-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
-                <button class="full-width input" onclick="requestTrade('buy', 'ls', {{ls.id}}, document.getElementById('buy-ls-count-{{ls.id}}').value)">Koupit</button>
+                <div class="brick-inputs">
+                    <input id="buy-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button" onclick="requestTrade('buy', 'ls', {{ls.id}}, document.getElementById('buy-ls-count-{{ls.id}}').value)">Koupit</button>
+                </div>
             </div>
             {% include "pastvina/parts/age_chart.html" with chart_type="livestock" color=ls.color name=ls.name name_genitive=ls.name_genitive id=ls.id growth_time=ls.growth_time life_time=ls.life_time %}
             <div class="quarter brick">
-                <input id="sell-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
-                <button class="full-width input" onclick="requestTrade('sell', 'ls', {{ls.id}}, document.getElementById('sell-ls-count-{{ls.id}}').value)">Porazit a prodat (max {{round.livestock_slaughter_limit}} ks)</button>
-                <input id="kill-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
-                <button class="full-width input" onclick="requestTrade('kill', 'ls', {{ls.id}}, document.getElementById('kill-ls-count-{{ls.id}}').value)">Utratit</button>
+                <div class="brick-inputs">
+                    <input id="sell-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button" onclick="requestTrade('sell', 'ls', {{ls.id}}, document.getElementById('sell-ls-count-{{ls.id}}').value)">Porazit a prodat (max {{round.livestock_slaughter_limit}} ks)</button>
+                <div class="brick-inputs">
+                </div>
+                    <input id="kill-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button" onclick="requestTrade('kill', 'ls', {{ls.id}}, document.getElementById('kill-ls-count-{{ls.id}}').value)">Utratit</button>
+                </div>
             </div>
         </div>
         {% endfor %}
