--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -9,7 +9,10 @@
 {% endif %}
     <div class="left">
     <a href="/" class="logo">N-trophy 2021 finále</a>
+
     <a href="{% url 'game_overview' %}">Hry</a>
+    
+    <a href="{% url 'rules' %}">Pravidla</a>
 
     </div>
     <div class="right">
