--- a/pastvina/templates/pastvina/game_overview.html
+++ b/pastvina/templates/pastvina/game_overview.html
@@ -1,7 +1,7 @@
 {% extends "pastvina/base.html" %}
 {% load extras %}
 
-{% block title %} Hra {% endblock%}
+{% block title %} Hry {% endblock%}
 
 {% block head %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -11,18 +11,7 @@
 <section class="padding-small light">
     <h1>Vítejte na pastvině</h1>
 </section>
-<section class="padding-small dark">
-    <h2>Pravidla</h2>
-    <p>
-        <ul>
-            <li>Nejezte vzácné druhy květin.</li>
-            <li>Netrkejte ostatní kozy.</li>
-        </ul>
-    </p>
-</section>
 
-
-{% include "pastvina/parts/game_header.html" %}
 
 <section class="padding-small light">
     <h2>Přehled kol</h2>
