--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -53,15 +53,15 @@
         <div class="container centered control-box">
             <div class="quarter brick">
                 <div class="brick-inputs">
-                    <input id="buy-crop-count-{{crop.id}}" class="full-width input" type="number" value=0 min="0">
-                    <button class="full-width buy-sell-button" onclick="requestTrade('buy', 'crop', {{crop.id}}, document.getElementById('buy-crop-count-{{crop.id}}').value)">Koupit</button>
+                    <input id="buy-crop-count-{{crop.id}}" class="full-width input setter" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button setter" onclick="requestTrade('buy', 'crop', {{crop.id}}, document.getElementById('buy-crop-count-{{crop.id}}').value)">Koupit</button>
                 </div>
             </div>
             {% include "pastvina/parts/age_chart.html" with chart_type="crop" color=crop.color name=crop.name name_genitive=crop.name_genitive id=crop.id growth_time=crop.growth_time life_time=crop.rotting_time %}
             <div class="quarter brick">
                 <div class="brick-inputs">
-                    <input id="sell-crop-count-{{crop.id}}" class="full-width input" type="number" value=0 min="0">
-                    <button class="full-width buy-sell-button" onclick="requestTrade('sell', 'crop', {{crop.id}}, document.getElementById('sell-crop-count-{{crop.id}}').value)">Prodat</button>
+                    <input id="sell-crop-count-{{crop.id}}" class="full-width input setter" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button setter" onclick="requestTrade('sell', 'crop', {{crop.id}}, document.getElementById('sell-crop-count-{{crop.id}}').value)">Prodat</button>
                 </div>
             </div>
         </div>
@@ -105,19 +105,19 @@
         <div class="container centered control-box">
             <div class="quarter brick">
                 <div class="brick-inputs">
-                    <input id="buy-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
-                    <button class="full-width buy-sell-button" onclick="requestTrade('buy', 'ls', {{ls.id}}, document.getElementById('buy-ls-count-{{ls.id}}').value)">Koupit</button>
+                    <input id="buy-ls-count-{{ls.id}}" class="full-width input setter" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button setter" onclick="requestTrade('buy', 'ls', {{ls.id}}, document.getElementById('buy-ls-count-{{ls.id}}').value)">Koupit</button>
                 </div>
             </div>
             {% include "pastvina/parts/age_chart.html" with chart_type="livestock" color=ls.color name=ls.name name_genitive=ls.name_genitive id=ls.id growth_time=ls.growth_time life_time=ls.life_time %}
             <div class="quarter brick">
                 <div class="brick-inputs">
-                    <input id="sell-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
-                    <button class="full-width buy-sell-button" onclick="requestTrade('sell', 'ls', {{ls.id}}, document.getElementById('sell-ls-count-{{ls.id}}').value)">Porazit a prodat (max {{round.livestock_slaughter_limit}} ks)</button>
+                    <input id="sell-ls-count-{{ls.id}}" class="full-width input setter" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button setter" onclick="requestTrade('sell', 'ls', {{ls.id}}, document.getElementById('sell-ls-count-{{ls.id}}').value)">Porazit a prodat (max {{round.livestock_slaughter_limit}} ks)</button>
                 <div class="brick-inputs">
                 </div>
-                    <input id="kill-ls-count-{{ls.id}}" class="full-width input" type="number" value=0 min="0">
-                    <button class="full-width buy-sell-button" onclick="requestTrade('kill', 'ls', {{ls.id}}, document.getElementById('kill-ls-count-{{ls.id}}').value)">Utratit</button>
+                    <input id="kill-ls-count-{{ls.id}}" class="full-width input setter" type="number" value=0 min="0">
+                    <button class="full-width buy-sell-button setter" onclick="requestTrade('kill', 'ls', {{ls.id}}, document.getElementById('kill-ls-count-{{ls.id}}').value)">Utratit</button>
                 </div>
             </div>
         </div>
